--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "author": "Arne Bertrand",
   "license": "MIT",
-  "dependencies": {
-    "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.1"
+  "devDependencies": {
+    "@changesets/changelog-github": "^0.4.0",
+    "@changesets/cli": "^2.26.1"
   }
 }
